--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
-
+    "dev": "set NODE_ENV=DEV&& nodemon app.js",
+    "prod": "set NODE_ENV=PROD&& nodemon app.js"
   },
   "author": "",
   "license": "ISC",
